--- a/style.css
+++ b/style.css
@@ -153,7 +153,6 @@ nav::before {
 
 .nav-menu-list-item {
 	position: relative;
-	/*width: 100%;*/
 }
 
 .nav-menu-link {
@@ -170,13 +169,14 @@ nav::before {
 
 .nav-submenu-list {
 	transform: translateY(-40px);
-	max-height: 0;
+	max-height: 0px;
 	opacity: 0;
 	visibility: hidden;
 	transition: all 0.3s ease 0s;
+	overflow: hidden;
 }
 
-.nav-menu-list-item:hover .nav-submenu-list,
+body.mouse .nav-menu-list-item:hover .nav-submenu-list,
 .nav-submenu-list.active {
 	max-height: 400px;
 	transform: translateY(0);
